# neural-networks-from-scratch

./: .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  main.py  minimal.ipynb  pyproject.toml
notebooks/: linearNNs.ipynb  multilayerPerceptron.ipynb  nHiddenLayers.ipynb  oneHiddenLayer.ipynb
src/nnfs/activations/: __init__.py  functions.py  generic_activation.py
src/nnfs/layers/: __init__.py  generic_layer.py  layers.py
src/nnfs/losses/: __init__.py  functions.py  generic_loss.py
src/nnfs/models/: neural_network.py
src/nnfs/optimizers/: __init__.py  generic_optimizer.py  optimizers.py
src/nnfs/utils/: __init__.py  preprocessing.py  tools.py
