[tool.poetry]
name = "neural-networks-from-scratch"
version = "0.1.0"
description = "Neural Networks from first principles to better understand their mathematical underpinnings."
authors = ["0xrutvij <rutvij.shah96@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nnfs", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.5"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
mypy = "^0.991"
hypothesis = "^6.58.0"
pylama = "^8.4.1"
jupyterlab = "^3.5.0"
jupyterlab-lsp = "^3.10.2"
jedi-language-server = "^0.39.0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'
